# guardrails-api

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  ApiClientLibraries.md  Dockerfile  Dockerfile.dev  Dockerfile.enterprise  Dockerfile.heavy  Dockerfile.lite  Dockerfile.prod  Makefile  README.md  TODO.md  ab-post-body.txt  ab-test.sh  app.py  build-sdk.sh  compose.yml  config.py  dbuild.sh  dev-build.sh  dev-run.sh  dev.sh  docker-compose-dev.yml  docker-compose.yml  enterprise-build.sh  enterprise-run.sh  guard.json  heavy-run.sh  how to run  hub-requirements.txt  ingestion-service-spec.yml  lite-build.sh  lite-run.sh  local.sh  open-api-spec.yml  otel-collector-config.yaml  prod-build.sh  (+20 more)
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: integration_tests.yml  pr_qa.yml  publish.yml  publish_image.yml
buildspecs/: build.sh  deploy.yml  heavy-build.sh  hub-install.sh
cdktf/: package-lock.json  package.json
cdktf/src/: index.ts
configs/: lambda-collector-config.yml  otel-collector-config.yml  pipelines.yml
custom-install/: install.py
custom-install/manifests/: competitor-check.json  detect-pii.json  jailbreak.json  provenance-llm.json  restrict-to-topic.json
custom_validators/: __init__.py  custom_provenance.py  load_model.py  starts_with.py
data-prepper-configs/: otel-collector-config.yml  pipelines.yml
diagrams/: GuardRails Infra - Option 1.drawio  GuardRails Infra - Option 2.drawio
documents/: helio-mechanics.txt  solar-relationships.txt  star.txt
guardrails_api/: __init__.py  app.py  config.py  default.env  open-api-spec.json  start  start-dev.sh  start.sh  streaming-test.ipynb
guardrails_api/api/: guards.py  root.py
guardrails_api/blueprints/: guards.py  root.py
guardrails_api/classes/: create_chat_completion_request.py  data_type_struct.py  guard_struct.py  guarded_chat_completion.py  http_error.py  rail_spec_struct.py  schema_element_struct.py  schema_struct.py  validate_request.py  validation_output.py
guardrails_api/cli/: __init__.py  start.py
guardrails_api/clients/: cache_client.py  get_guard_client.py  guard_client.py  memory_guard_client.py  pg_guard_client.py  postgres_client.py
guardrails_api/db/: get_db_pool_config.py  get_db_url.py  postgres_client.py
guardrails_api/migrations/: alembic.ini  env.py
guardrails_api/models/: base.py  guard_item.py  guard_item_audit.py
guardrails_api/otel/: __init__.py  metrics.py  traces.py
guardrails_api/utils/: attach_validation_summaries.py  configuration.py  get_int_env_var.py  get_llm_callable.py  handle_error.py  has_internet_connection.py  openai.py  payload_validator.py  pip.py  prep_environment.py  trace_server_start_if_enabled.py
integration_tests/: Dockerfile  Dockerfile.w_config  Dockerfile.w_db  __init__.py  all.sh  build.sh  check.sh  clean.sh  config.py  export.sh  integration_tests.env  run.sh  test.sh
integration_tests/tests/: test_server_w_config.py  test_server_w_db.py
sample-guards/: name-guard.json  object-string-guard.json  provenance-guard.json  string-guard.json  summary-guard.json
scripts/: pluck_openai_api_spec.py
src/auth/: __init__.py  auth_n.py
src/blueprints/: __init__.py  guards.py  railspec-templates.py  railspec_templates.py  root.py  validators.py
src/classes/: __init__.py  base_prompt_struct.py  data_type_struct.py  element_stub.py  guard_struct.py  health_check.py  http_error.py  rail_spec_struct.py  railspec_template_struct.py  schema_element_struct.py  schema_struct.py  script_struct.py  validation_output.py
src/clients/: __init__.py  guard_client.py  memory_guard_client.py  pg_guard_client.py  postgres_client.py  railspec_template_client.py
src/ingestion_service/: database.py  ingest.py  ingestion_client.py  wsgi.py
src/models/: __init__.py  base.py  guard_item.py  guard_item_audit.py  railspec_template_item.py
tests/: README.md  __init__.py  test_app.py  test_config.py  test_open_api_spec.py
(+105 files in other folders)
