[project]
name = "guardrails-api"
version = "0.3.2"
description = "Guardrails API"
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["Guardrails", "Guardrails AI", "Guardrails API", "Guardrails API"]
requires-python = ">=3.10,<4.0"
dependencies = [
    "guardrails-ai>=0.8.2",
    "jsonschema>=4.22.0,<5",
    "referencing>=0.35.1,<1",
    "psycopg2-binary>=2.9.9,<3",
    "litellm>=1.39.3,<2",
    "typer>=0.9.4,<1",
    "requests>=2.32.3",
    "aiocache>=0.11.1",
    "fastapi>=0.114.1",
    "SQLAlchemy>=2.0.34",
    "alembic>=1.18.4",
    "uvicorn>=0.30.6",
    "python-dotenv>=1.2.1"
]

[project.scripts]
guardrails-api = "guardrails_api.cli:cli"

[project.optional-dependencies]
dev = [
    "ruff",
    "coverage",
    "gunicorn>=22.0.0,<23",
    "pre-commit",
    "opentelemetry-distro",
    "jsonref",
    "PyYaml"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"guardrails_api" = ["py.typed", "open-api-spec.json"]

[tool.pyright]
include = ["guardrails_api"]